--- a/7rmart/.project
+++ b/7rmart/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>7rmart</name>
+	<name>Selenium_MainProject</name>
 	<comment></comment>
 	<projects>
 	</projects>
