--- a/7rmart/pom.xml
+++ b/7rmart/pom.xml
@@ -3,8 +3,32 @@
   <groupId>Com.Obsqura</groupId>
   <artifactId>Selenium_MainProject</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>Grouping.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>      
   <dependencies>
-  	<dependency>
+  <dependency>
   		<groupId>com.obsqura</groupId>
   		<artifactId>SeleniumDemoProject</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
@@ -14,26 +38,31 @@
   		<artifactId>TestNG</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
-  	<dependency>
+  <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.22</version>
+      </dependency>
+  <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
-    <version>4.27.0</version>
+    <version>4.26.0</version>
 </dependency>
   	<dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
-    <version>7.8.0</version>
+    <version>7.10.2</version>
     <scope>test</scope>
 </dependency>
 <dependency>
     <groupId>org.apache.poi</groupId>
-    <artifactId>poi</artifactId>
-    <version>5.2.3</version>
+    <artifactId>poi-ooxml</artifactId>
+    <version>5.2.5</version>
 </dependency>
 <dependency>
     <groupId>org.apache.poi</groupId>
-    <artifactId>poi-ooxml</artifactId>
-    <version>5.2.3</version>
+    <artifactId>poi</artifactId>
+    <version>5.2.5</version>
 </dependency>
 <dependency>
     <groupId>com.aventstack</groupId>
@@ -45,10 +74,5 @@
 			<artifactId>javafaker</artifactId>
 			<version>0.15</version>
 		</dependency>
-		<dependency>
-  <groupId>org.apache.logging.log4j</groupId>
-  <artifactId>log4j-core</artifactId>
-  <version>2.20.0</version>
-</dependency>
   </dependencies>
 </project>
